--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -159,6 +159,8 @@ $$\frac{\partial^2}{\partial\theta^2}\ln L(\theta,x_{(1)}|x)=-\frac{n}{\theta^2}
 
 $$\hat\theta_{MLE}=\frac{n}{\ln(\prod_i x_i)-n\ln x_{(1)}}=\frac{n}{\ln(\frac{\prod_i x_i}{x_{(1)}^n})}=\frac{n}T$$
 
+ ---
+
 (b) Show that the LRT of $H_0:\theta=1, \nu$ unknown, versus $H_1: \theta\ne1,\nu$ unknown, has critical region of the form $\{x:T(x)\le C_1 or T(x)\ge c_2\}$, where $0<C_1<C_2$ and
 $T=\ln\left[\frac{\prod_{i=1}^n X_i}{(\min\limits_{i} X_i)^n}\right]$
 
@@ -187,6 +189,8 @@ $W_i$s are independent with $W_1$, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu $, and 
 
 $$2T\sim Gam(n−1, 2)=\chi^2_{2(n−1)}$$
 
+ ---
+ 
 **8.17** Suppose that $X_1,..,X_n$ are iid with a $beta(\mu,1)$ pdf and $Y_1,..,Y_m$ are iid with a $beta(\theta,1)$ pdf. Also assume that the $X$s are independent of the $Y$s.
 
 (a) Find an LRT of $H_0:(\theta=\mu$ versus $H_1:(\theta\ne\mu$.
@@ -211,6 +215,8 @@ The LRT statistic is
 
 $$\Lambda=\frac{\sup L(\hat\mu_0|x,y)}{\sup L(\hat\mu_{MLE}|x,y)}=\frac{\hat\mu_0^{n+m}(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{\hat\mu_{0}-1}}{\hat\mu_{MLE}^n(\prod_{i=1}^nx_i)^{\hat\mu_{MLE}-1}\hat\theta_{MLE}^m(\prod_{j=1}^my_j)^{\hat\theta_{MLE}-1}}=\frac{\hat\mu_0^{n+m}}{\hat\mu_{MLE}^n\hat\theta_{MLE}^m}\cdot(\prod_{i=1}^nx_i)^{\hat\mu_0-\hat\mu_{MLE}}(\prod_{j=1}^my_j)^{\hat\mu_0-\hat\theta_{MLE}}$$
 
+ ---
+ 
 (b) Show that the test in part (a) can be based on the statistic
 
 $$\sum_{i=1}^n\ln x_i=-\frac{n}{\hat\mu_{MLE}},\sum_{j=1}^m\ln y_j=-\frac{m}{\hat\theta_{MLE}}$$
@@ -224,6 +230,8 @@ $$=(\frac{n+m}{n})^n(\frac{n+m}{m})^mT^n(1-T)^m$$
 
 which is an unimodal function of $T$, so rejecting $H_0$ when $\Lambda\le c$ equivalent to rejecting $H_0$ when $T\le c_0$ or $T\ge c_1$ where $c_0,c_1$ are appropriate chosen constants.
 
+ ---
+
 (c) Find the distribution of $T$ when $H_0$ is true, and then show how to get a test of size $\alpha=.10$.
 
 We know if $X\sim Gamma(\mu,\beta)$ and $Y\sim Gamma(\theta,\beta)$ are independent, then $T=\frac{X}{X+Y}\sim Beta(\mu,\theta)$.
@@ -234,6 +242,8 @@ To find $c_1,c_2$,
 
 $$\begin{cases}P(T\le c_1)+P(T\ge c_2)=\alpha=0.10\\c_1^n(1-c_1)^m=c_2^n(1-c_2)^m\end{cases}$$
 
+ ---
+ 
 **8.19** The random variable $X$ has pdf $f(x)=e^{-x}, x>0$. One observation is obtained on the random variable $Y=X^{\theta}$, and a test of $H_0:\theta=1$ versus $H_1:\theta=2$ needs to be constructed. Find the UMP level $\alpha=.10$ test and compute the Type II Error probability.
 
 $f(x)=e^{-x}$ is monotone when $x>0$. $X=Y^{1/\theta}$, $\frac{dx}{dy}=\frac1\theta y^{\frac1\theta-1}$, then
@@ -263,15 +273,11 @@ exp(solve(m, c(log(5),log(10))))
 -exp(-3.637798^0.5)+exp(-0.076546^0.5)
 ```
 
-The test $\Lambda\le c_0=0.076546$,$\Lambda\ge c_1=3.637798$ is UMP at $0.10$ level.
+The test $\Lambda\le c_0=0.076546$,$\Lambda\ge c_1=3.637798$ is most powerful $\forall\theta_1\notin\Omega_0$, so it is UMP at $0.10$ level.
 
 The Type II error probability is
 
 $$P(c_0<Y<c_1|\theta_1)=\int_{c_0}^{c_1}\frac12e^{-y^{1/2}} y^{-1/2}dy=\left.-e^{-y^{1/2}}\right|_{c_0}^{c_1}=0.609824$$
-
-
-
-. So we have a test that is most powerful $\forall\theta_1\notin\Omega_0$, so it is UMP.
 
 ## HW3
 
