--- a/static/usp570/cs_usp570.Rmd
+++ b/static/usp570/cs_usp570.Rmd
@@ -1,13 +1,16 @@
 ---
-title: "Case Study Discussion"
-subtitle: "USP 570"
-date: 'weeks 3-10'
+title: "San Francisco–Oakland–Hayward MSA"
+subtitle: "Case Study, USP 570"
+author: 'Shen Qu'
+date: "Spring, 2019"
 output:
-  xaringan::moon_reader:
-    css: "example.css"
-    seal: yes
-    nature:
-      highlightStyle: github
+  pdf_document: default
+  word_document: null
+bibliography: bib_cs_usp570.bib
+mainfont: Times New Roman
+geometry: margin=1in
+spacing: double
+fontsize: 12pt
 
 ---
 
@@ -17,45 +20,9 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-Each of you will choose a metropolitan region (but not Portland, Oregon) to examine as a case study of integrating transportation and land use. You will present you case to the class sometime during weeks 3-10. The metro area you choose can be in the US or abroad.
-
-• zz
-• zzz
-
-
-The deliverable for this assignment is your presentation in class (10 minutes maximum, plus Q&A), contributions to a shared document with some of the key points (Google sheet linked below), and a list of references you used for your research (submitted here). I do not expect you to do a comprehensive case study of the region, but to highlight points that are most relevant to this course.
+References {#references .unnumbered}
+==========
 
 ---
-
-### Some basics about the existing land use and transportation, e.g. population size, density, land area, transit infrastructure/system, etc. 
-
----
-
-### What challenges/issues the region is facing with respect to transportation and land use
-
----
-
-### How transportation and land use is governed 
-
-
-
----
-
-### How the current regional transportation plan integrates land use
-
-
-
----
-
-### Any innovative approaches or success stories for integrating transportation and land use
-
-
----
-
-### References
-
-
-
-[Bopp, M., Gayah, V.V., Campbell, E.M. (2015) Examining the Link Between Public Transit Use and Active Commuting. International Journal of Environmental Research and Public Health 12.](https://dx.doi.org/10.3390/ijerph120404256)
-
-
+nocite: '@*'
+...
