566 HW1 fix Apr 15

--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -98,6 +98,8 @@ Based on the ANOVA table, all the P-value are larger than 0.05. There is no fact
 
 (i) Create a table of plus and minus for a $2^5$ factorial design. Make sure to use standard order of letter assignments for treatment combinations.
 
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQA5d57ghgj2L4D_2ZpRG1InfBd-3naBrFaJzFwXe78CL5jQ5sH-BTJ8A3DXLwuGV744-4588cxGBKJ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
 <!--|     | A	| B	| C | D | E | AB | AC | AD | AE | BC | BD | BE | CD | CE | DE | ABC | ABD | ABE | ACD | ACE | ADE | BCD | BCE | BDE | CDE | ABCD | ABCE | ABDE | ACDE | BCDE | ABCDE |
 | --- | --| --| --| --| --| -- | -- | -- | -- | -- | -- | -- | -- | -- | -- | --  | --  | --  | --  | --  | --  | --  | --  | --  | --  |  --  |  --  |  --  |  --  |  --  |  --   |
 |(1)  | - | - | - | - | - | +  | +  | +  | +  | +  | +  | +  | +  | +  | +  | -   | -   | -   | -   | -   | -   | -   | -   | -   | -   |  +   |  +   |  +   |  +   |  +   |  -    |
