--- a/static/stat566/hw_stat566.Rmd
+++ b/static/stat566/hw_stat566.Rmd
@@ -7,6 +7,11 @@ output: html_document
 
 #  {.tabset .tabset-fade .tabset-pills}
 
+```{r setup, include=F}
+knitr::opts_chunk$set(message=FALSE, warning=F, echo=F)
+options(width = 2000)
+options(repos="https://cran.rstudio.com")
+```
 
 ## HW1
 
@@ -212,8 +217,8 @@ Based on the normal QQ plot, only the effects of $A, B, AB$ are non-negligible. 
 
 The single replicate $2^4$ factorial model with fixed effects and replications, and without neglegible terms is:
 
-$$y_{ij}=\mu+\tau_i+\beta_j+(\tau\beta)_{ij}+\varepsilon_{ij}$$
-for $i=1,2$ ; $j=1,2$, where 
+$$y_{ijk}=\mu+\tau_i+\beta_j+(\tau\beta)_{ij}+\varepsilon_{ijk}$$
+for $i=1,2$ ; $j=1,2$; $k=1,2,3,4$, where 
 
 $\tau_i$ is fixed main effect of $i^{th}$ level of  Factor A;
 
@@ -221,10 +226,10 @@ $\beta_j$ is fixed main effect of $j^{th}$ level of Factor B;
 
 $(\tau\beta)_{ij}$ is fixed interaction effect of $i^{th}$ level of Factor A and $j^{th}$ level of Factor B;
 
-$\varepsilon_{ij}$ is random error for the single replicate Exerimental Unit when $i^{th}$ level of Factor A and $j^{th}$ level of Factor B are applied.
+$\varepsilon_{ijk}$ is random error for the single replicate Exerimental Unit when $i^{th}$ level of Factor A and $j^{th}$ level of Factor B are applied.
 
-$y_{ij}$ is response for the single replicate EU when  $i^{th}$ level of Factor A and  $j^{th}$ level of Factor B are applied.
+$y_{ijk}$ is response for the 4 replicate EU when  $i^{th}$ level of Factor A and  $j^{th}$ level of Factor B are applied.
 
 Assumptions:
 
-$\varepsilon_{ij}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$; $\sum_j^2\beta_j=0$; $\sum_i^2(\tau\beta)_{ij}=0$; $\sum_j^2(\tau\beta)_{ij}=0$
+$\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$; $\sum_j^2\beta_j=0$; $\sum_i^2(\tau\beta)_{ij}=0$; $\sum_j^2(\tau\beta)_{ij}=0$
