--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -181,13 +181,21 @@ Thus, $T\le c$ is equivalent to $T\le c_1$ or $T\ge c_2$, for appropriately chos
 (c) Show that, under $H_0, 2T$ has a $\chi^2$ distribution, and find the number of degrees of freedom. 
 (Hint: Obtain the joint distribution of the $n-1$ nontrivial terms $X_i/(\min_i X_i)$ conditional on $\min_i X_i$. Put these $n-1$ terms together, and notice that the distribution of $T$ given $\min_i X_i$ does not depend on $\min_i X_i$, so it is the unconditional distribution of $T$.)
 
-Let $Y_i=\ln X_i, i=1,..,n$. 
+Under $H_0$, $f(x|1,\nu)=\frac{\nu}{x^2}I_{[\nu,\infty)}(x),\nu>0$ is monotone when $x>\nu>0$
 
-Sets $Z_1=\min_i Y_i$, Z2,..,Zn equal to the remaining $Y_i$s with same order. 
+Let $Y_i=\ln X_i, i=1,..,n$. $X_i=e^{y_i}$, $\frac{dx}{dy}=e^y$, then
 
-Let $W_1=Z_1$ and $W_i=Z_i−Z_1,i=2,..,n$. 
+$$f(y|1,\nu)=f(x|1,\nu)|\frac{dx}{dy}|=\frac{\nu}{y^2}e^y, y>0$$
 
-$W_i$s are independent with $W_1$, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu $, and $W_i\sim Expo(1), i=2,..,n$. Now T =Pn i=2, $W_i\sim Gam(n−1,1)$, and, hence,
+$y_1=\frac{\nu}{y_1^2}e^{y_1}$,$y_i=\frac{\nu}{y_i^2}e^{y_i}$
+
+Let $W_1=Y_1$ and $W_2=Y_i−Y_{(1)},i=2,..,n$.
+
+$f_{W_1,W_2}(Y_{(1)},Y_i)=f_{Y_{(1)},Y_i}(\frac{\nu}{y_1^2}e^{y_1},\frac{\nu}{y_i^2}e^{y_i}$
+
+$W_1, W_2$ are independent, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$, and $W_i\sim Expo(1), i=2,..,n$. Now T =Pn i=2, $W_i\sim Gam(n−1,1)$, and, hence,
+
+$T=\sum_{i=1}^n(\ln X_i-\ln X_{(1)})=\sum_{i=1}^n(Y_i-Y_{(1)})$
 
 $$2T\sim Gam(n−1, 2)=\chi^2_{2(n−1)}$$
 
