563HW2 Apr 16 2nd

--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -193,9 +193,10 @@ Let $W_1=Y_1$ and $W_2=Y_i−Y_{(1)},i=2,..,n$.
 
 $f_{W_1,W_2}(Y_{(1)},Y_i)=f_{Y_{(1)},Y_i}(\frac{\nu}{y_1^2}e^{y_1},\frac{\nu}{y_i^2}e^{y_i}$
 
-$W_1, W_2$ are independent, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$, and $W_i\sim Expo(1), i=2,..,n$. Now T =Pn i=2, $W_i\sim Gam(n−1,1)$, and, hence,
+$W_1, W_2$ are independent, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$, and $W_i\sim Expo(1), i=2,..,n$. 
 
-$T=\sum_{i=1}^n(\ln X_i-\ln X_{(1)})=\sum_{i=1}^n(Y_i-Y_{(1)})$
+$T=\sum_{i=1}^n(\ln X_i-\ln X_{(1)})=\sum_{i=1}^n(Y_i-Y_{(1)})=\sum_{i=2}^nW_i\sim Gam(n−1, 1)$
+
 
 $$2T\sim Gam(n−1, 2)=\chi^2_{2(n−1)}$$
 
