--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -185,15 +185,21 @@ Under $H_0$, $f(x|1,\nu)=\frac{\nu}{x^2}I_{[\nu,\infty)}(x),\nu>0$ is monotone w
 
 Let $Y_i=\ln X_i, i=1,..,n$. $X_i=e^{y_i}$, $\frac{dx}{dy}=e^y$, then
 
-$$f(y|1,\nu)=f(x|1,\nu)|\frac{dx}{dy}|=\frac{\nu}{y^2}e^y, y>0$$
+$$f(y|1,\nu)=f(x|1,\nu)|\frac{dx}{dy}|=\frac{\nu}{x^2}e^y=ve^{-y}, y>0$$
 
-$y_1=\frac{\nu}{y_1^2}e^{y_1}$,$y_i=\frac{\nu}{y_i^2}e^{y_i}$
+$Y_1=\nu e^{-y_1}$,$Y_i=\nu e^{-y_i}$
 
-Let $W_1=Y_1$ and $W_2=Y_i−Y_{(1)},i=2,..,n$.
+Let $W_1=Y_1=\nu e^{-y_1}$ and $W_2=Y_i−Y_{(1)}=\nu e^{-y_i}-\nu e^{-y_1},i=2,..,n$.
 
-$f_{W_1,W_2}(Y_{(1)},Y_i)=f_{Y_{(1)},Y_i}(\frac{\nu}{y_1^2}e^{y_1},\frac{\nu}{y_i^2}e^{y_i}$
+$y_1=\frac{\ln w_1}{\nu}, y_i=\ln(w_1-w_2)$. $|J|=\begin{vmatrix}\frac{1}{w_1\nu} & 0 \\ \frac1{w_1-w_2} & -\frac1{w_1-w_2} \end{vmatrix}=\frac1{w_1\nu(w_1-w_2)}$
 
-$W_1, W_2$ are independent, $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$, and $W_i\sim Expo(1), i=2,..,n$. 
+$f_{W_1,W_2}(Y_{(1)},Y_i)=f_{Y_{(1)},Y_i}(\nu e^{-y_1},\nu e^{-y_i})|J|=\frac1{w_1\nu(w_1-w_2)}$
+
+$W_1, W_2$ are independent, 
+
+$f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$,
+
+$W_i\sim Expo(1), i=2,..,n$. 
 
 $T=\sum_{i=1}^n(\ln X_i-\ln X_{(1)})=\sum_{i=1}^n(Y_i-Y_{(1)})=\sum_{i=2}^nW_i\sim Gam(n−1, 1)$
 
