563HW2 Apr 16 3rd

--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -191,9 +191,9 @@ $Y_1=\nu e^{-y_1}$,$Y_i=\nu e^{-y_i}$
 
 Let $W_1=Y_1=\nu e^{-y_1}$ and $W_2=Y_i−Y_{(1)}=\nu e^{-y_i}-\nu e^{-y_1},i=2,..,n$.
 
-$y_1=\frac{\ln w_1}{\nu}, y_i=\ln(w_1-w_2)$. $|J|=\begin{vmatrix}\frac{1}{w_1\nu} & 0 \\ \frac1{w_1-w_2} & -\frac1{w_1-w_2} \end{vmatrix}=\frac1{w_1\nu(w_1-w_2)}$
+$y_1=\ln\nu-\ln w_1, y_i=\ln\nu-\ln(w_1+w_2)$. $|J|=\begin{vmatrix}-\frac{1}{w_1} & 0 \\ -\frac1{w_1+w_2} & -\frac1{w_1+w_2} \end{vmatrix}=\frac1{w_1(w_1+w_2)}$
 
-$f_{W_1,W_2}(Y_{(1)},Y_i)=f_{Y_{(1)},Y_i}(\nu e^{-y_1},\nu e^{-y_i})|J|=\frac1{w_1\nu(w_1-w_2)}$
+$$f_{W_1,W_2}(w_1,w_2)=f_{Y_{(1)},Y_i}(y_1,y_i)|J|=\nu^2e^{\ln w_1-\ln\nu}e^{\ln(w_1+w_2)-\ln\nu}\frac1{w_1(w_1+w_2)}$$
 
 $W_1, W_2$ are independent, 
 
