--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -186,18 +186,21 @@ Under $H_0$, $f(x|1,\nu)=\frac{\nu}{x^2}I_{[\nu,\infty)}(x),\nu>0$ is monotone w
 Let $Y_i=\ln X_i, i=1,..,n$. $X_i=e^{y_i}$, $\frac{dx}{dy}=e^y$, then
 
 $$f(y|1,\nu)=f(x|1,\nu)|\frac{dx}{dy}|=\frac{\nu}{x^2}e^y=ve^{-y}, y>0$$
+$$F(y|1,\nu)=\int_0^{\infty}ve^{-y}dy=1-ve^{-y}$$
 
-$Y_1=\nu e^{-y_1}$,$Y_i=\nu e^{-y_i}$
+$$f_{Y_{(1)}}(y)=\frac{n!}{(1-1)!(n-1)!}f_Y(y)[F_Y(y)]^{1-1}[1-F_Y(y)]^{n-1}=n\cdot\nu e^{−y}\cdot(\nu e^{−y})^{n-1}=n\nu^ne^{−ny}$$
 
-Let $W_1=Y_1=\nu e^{-y_1}$ and $W_2=Y_i−Y_{(1)}=\nu e^{-y_i}-\nu e^{-y_1},i=2,..,n$.
+$Y_i=\nu e^{-y_i}$
 
-$y_1=\ln\nu-\ln w_1, y_i=\ln\nu-\ln(w_1+w_2)$. $|J|=\begin{vmatrix}-\frac{1}{w_1} & 0 \\ -\frac1{w_1+w_2} & -\frac1{w_1+w_2} \end{vmatrix}=\frac1{w_1(w_1+w_2)}$
+Let $W_1=Y_{(1)}=n\nu^ne^{−ny}$ and $W_i=Y_i−Y_{(1)}$, then $Y_{(1)}=w_1, Y_i=w_1+w_2$. $|J|=\begin{vmatrix}1 & 0 \\ 1 & 1 \end{vmatrix}=1$
 
-$$f_{W_1,W_2}(w_1,w_2)=f_{Y_{(1)},Y_i}(y_1,y_i)|J|=\nu^2e^{\ln w_1-\ln\nu}e^{\ln(w_1+w_2)-\ln\nu}\frac1{w_1(w_1+w_2)}$$
-
-$W_1, W_2$ are independent, 
+$$f_{W_1,W_i}(w)=f_{Y_{(1)},Y_i}(y)|J|=n\nu^{n+1}e^{-(n+1)y}$$
 
 $f_{W_1}(w)=n\nu^ne^{−nw}, w>\ln\nu$,
+
+$$f_{W_i}(w)=\int_{-\infty}^{\infty}f(w_1,w_i)dw_1=\int_{-\infty}^{\infty}n\nu^{n+1}e^{-(n+1)y}d(n\nu^ne^{−ny})=?=e^{-w_i}$$
+
+$W_1, W_2$ are independent, 
 
 $W_i\sim Expo(1), i=2,..,n$. 
 
