--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -191,11 +191,11 @@ $F(y|1,\nu)=\int_0^{\infty}ve^{-y}dy=1-ve^{-y}$
 
 $f_{Y_{(1)}}(y)=\frac{n!}{(1-1)!(n-1)!}f_Y(y)[F_Y(y)]^{1-1}[1-F_Y(y)]^{n-1}=n\cdot\nu e^{−y}\cdot(\nu e^{−y})^{n-1}=n\nu^ne^{−ny}$
 
-Let $Z_1=Y_{(1)}$, $Z_i=Y_i-Y_{(1)}, i=2,..,n$, $Z_1$ and $Z_i$ are independent.
+Let $Z_1=Y_{(1)}$, $Z_2,..,Z_i$ equal to the remaining $Y_i$s. $Z_1$ and $Z_i$ are independent.
 
-$f_{Z_1,Z_i}(y_{(1),y_i)=f_{Y_{(1)}}(y_{(1)})f_{Y_i}(y_i)=n\nu^ne^{−ny_{(1)}}\nu e^{-y_i}=n\nu^{n+1}e^{−(ny_{(1)}+y_i)}, i=2,..,n$
+$f_{Z_1,Z_i}(y_{(1)},y_i)=f_{Y_{(1)}}(y_{(1)})f_{Y_i}(y_i)=n\nu^ne^{−ny_{(1)}}\nu e^{-y_i}=n\nu^{n+1}e^{−(ny_{(1)}+y_i)}, i=2,..,n$
 
-Let $W_1=Z_{1}=n\nu^ne^{−ny}$ and $W_i=Z_i−Z_{1}$, then $Z_{1}=w_1, Z_i=w_1+w_i$. $|J|=\begin{vmatrix}1 & 0 \\ 1 & 1 \end{vmatrix}=1$
+Let $W_1=Z_{1}=n\nu^ne^{−ny}$ and $W_i=Z_i−Z_{1}, i=2,..,n$, then $Z_{1}=w_1, Z_i=w_1+w_i$. $|J|=\begin{vmatrix}1 & 0 \\ 1 & 1 \end{vmatrix}=1$
 
 $$f_{W_1,W_i}(w_1,w_i)=f_{Z_{1},Z_i}(w_1,w_1+w_i)|J|=n\nu^{n+1}e^{−(nw_1+w_1+w_i)}=n\nu^{n+1}e^{−(n+1)w_1}e^{−w_i}$$
 
