--- a/docs/usp570/rr_usp570.Rmd
+++ b/docs/usp570/rr_usp570.Rmd
@@ -27,16 +27,15 @@ options(repos="https://cran.rstudio.com")
 
  - Transportation system and spatial form
  
-@Muller2017transportation reviews the evolution of the U.S. urban form and describe the four eras of intrametropolitan growth inludes walking-horsecar era, electric streetcar era, recreational auto era, and freeway era.  We can see the transportation technology is a determining constraint to other factors for urban form. The four-stage urban transportation development have their dominated spatial structure, which cannot be represented by some socio-economic factors. In the last section of his paper wrote in 1995, Muller stated the two problem of congestion and spatial mismatch caused by suburbanization and auto dependency. He also summarized some socioeconomic dynamics such as postindustrial economy, globalization, and the expansion of the services sector. He didn't talk about how new transportation techonology may launch the next era of metroplitian expansion. Now we can see some emerging techonological breakthrough is happening. Intelligent Transportation Systems (ITS) are replaceing precious travel decision mechanism. Many scholars start to predict the new urban forms affeceted by autononous vehicles. 
-However, admitting techonolgy as a initial force cannont tel us how will it forge a decidedly different future. As @levinson2018metropolitan emphasise transportation is a neccessary but not a sufficient factor for any development.
+@levinson2018metropolitan emphasize transportation is a necessary but not a sufficient factor for any development. Meanwhile, @Muller2017transportation reviews the evolution of the U.S. urban form and describe the four eras of intrametropolitan growth: walking-horsecar era, electric streetcar era, recreational auto era, and freeway era. Each of the four-stage urban transportation development has its dominated spatial structure, which is hard represented by other socio-economic concepts.  We can see the transportation technology is a determining constraint to other factors for urban form. In the last section of his paper wrote in 1995, Muller stated the two problems of congestion and spatial mismatch caused by suburbanization and auto dependency. He also summarized some socioeconomic dynamics such as postindustrial economy, globalization, and the expansion of the services sector. He didn't talk about how new transportation technology may launch the next era of metropolitan expansion. Now we can see some emerging technological breakthrough is happening. Intelligent Transportation Systems (ITS) are replacing precious travel decision mechanism step by step. Except admitting technology as an initial force, many scholars start to explore how the new force will forge a decidedly different future of urban forms. 
 
  - The choice of house and job
 
-@levinson2018metropolitan [ch.3] introduce several theories and models explaining how transport influences residential location preferences. From an economic perspective, the transport cost is the core element in Thünen's model of agricultural land and Alonso’s Bid-rent theory. Meanwhile, Schelling’s Segregation Model and Tiebout’s model of 'vote with feet' disclose the significant function of self-selection as a social element.
+@levinson2018metropolitan [ch.3] introduces several theories and models explaining how transport influences residential location preferences. From an economic perspective, the transport cost is the core element in Thünen's model of agricultural land and Alonso’s Bid-rent theory. Meanwhile, Schelling’s Segregation Model and Tiebout’s model of 'vote with feet' disclose the significant function of self-selection as a social element.
 
-@levinson2018metropolitan [ch.4] point out "the theory of behavior based on gravity models assume that geograohy plays a prominent role in predicting who interacts with whom and how frequently." This theory can explain the macro structure. Some evidences such as 'excess driving' and 'weak ties' show that transportation network is only a part of travel decisions. Social networks with a 'hub-and-spoke structure' play a prominent role in finding a job.
+@levinson2018metropolitan [ch.4] point out "the theory of behavior based on gravity models assume that geography plays a prominent role in predicting who interacts with whom and how frequently." This theory can explain the macrostructure. Some evidence such as 'excess driving' and 'weak ties' show that the transportation network is only a part of travel decisions. Social networks with a 'hub-and-spoke structure' play a prominent role in finding a job.
 
-The mechanism of social networks is difficult to define and messure by such as 'weak or strong link', 'close relation or not'. We have to depend on modeling to connnect the phenomenon and the roots. It is important to highlight the complex and indirect role of grography from @levinson2018metropolitan's argument.
+The mechanism of social networks is difficult to define and measure by such as 'weak or strong link,' 'close relation or not.' We have to depend on modeling to connect the phenomenon and the roots. It is important to highlight the complex and indirect role of geography from @levinson2018metropolitan's argument.
 
 ### Discussion
 
@@ -45,7 +44,7 @@ Hedonic regression analysis is a method using modeling techniques for measuring 
 
  - The models
  
-All the three studies used ordinary least-squares (OLS) modeling, which based on maximum likelihood principle.  @chen1998measuring's model[^1] is a typical multiple regression. Both @liu2017impact[^2] and @welch2016long[^3] try to control spatial dependence and prevent overestimation of coefficient estimates. @welch2016long employ a a spatiotemporal autocorrelation model to overcome the potentially confounding modeling errors. To avoid sample bias, @welch2016long's spatial panel data model adopt a bootstrapping regression estimates with a nonparametric approach, which constructed a 'pseudo spatial panel dataset' from a single observation for every grid cell, each year of the study period.
+All the three studies used ordinary least-squares (OLS) modeling, which based on the maximum likelihood principle.  @chen1998measuring's model[^1] is a typical multiple regression. Both @liu2017impact[^2] and @welch2016long[^3] try to control spatial dependence and prevent overestimation of coefficient estimates. @welch2016long employ a spatiotemporal autocorrelation model to overcome the potentially confounding modeling errors. To avoid sample bias, @welch2016long's spatial panel data model adopts bootstrapping regression estimates with a nonparametric approach, which constructed a 'pseudo spatial panel dataset' from a single observation for every grid cell, each year of the study period.
 
 [^1]: @chen1998measuring's model:
 $$P=a+bX +rZ +e$$
@@ -75,30 +74,30 @@ $W\varepsilon$ spatial error, interpreted as the mean error from neighboring loc
 $\nu$ independent model error.
 
 [^3]: @welch2016long's spatial panel data model
-$$\begin{cases}y=\lambda(I_T\cdot W_N)y+X\beta+u\\u=(\iota_T\cdot I_N)\mu+\varepsilon&\text{sum of the temporal autocorrelation} \\\varepsilon=\rho(I_T\cdot W_N)\varepsilon+\upsilon&\text{spatial autocorrelation} \end{cases}$$
+$$\begin{cases}y=\lambda(I_T\cdot W_N)y+X\beta+u&\\u=(\iota_T\cdot I_N)\mu+\varepsilon&\text{sum of the temporal autocorrelation} \\\varepsilon=\rho(I_T\cdot W_N)\varepsilon+\upsilon&\text{spatial autocorrelation} \end{cases}$$
 where, $y$ is an $NT\times1$ vector of observations on the dependent variable,
 $X$ is a $NT\times k$ matrix of observations on the non-stochastic exogenous variables, 
 $I_T$ is an identity matrix of dimension $T$, 
 $W_N$ is an $N\times N$ spatial weights matrix with diagonal elements set to zero, 
 $\lambda$ represents the corresponding spatial parameter. 
 
-@chen1998measuring examine the simple effects of LRT. The other two research conside the corelated effects of improved bike and rail transit facility access.
-@chen1998measuring evaluate the combined effect of accessibility and nuisance respond the distance from station or line. However, for LRT, the positive effect of accessibility is only related with the station, not the line. @welch2016long use street network distance instead of the straight-line measurements or a series of areal buffer approximations.
+@chen1998measuring examine the simple effects of LRT. The other two research consider the correlated effects of improved bike and rail transit facility access.
+@chen1998measuring evaluate the combined effect of accessibility and nuisance respond to the distance from station or line. However, for LRT, the positive effect of accessibility is only related to the station, not the line. @welch2016long use street network distance instead of the straight-line measurements or a series of areal buffer approximations.
 
-'Long term' means observe the cumulated effects by cross-sectional data analysis. @welch2016long think panel dataset can examine the long-term influence better. Since the opening of the Yellow Line in 2004, Green Line in 2009, and Central Loop Line in 2012, is DID method comparing the pre- and post-treatment effects from transit investments better?
+Cross-sectional data analysis observes the cumulated effects in the long term. @welch2016long think panel dataset can examine the long-term influence better. We know the opening of the Yellow Line in 2004, Green Line in 2009, and Central Loop Line in 2012. Is DID method comparing the pre- and post-treatment effects from transit investments better?
    
 @chen1998measuring only studied a corridor of the light rail system (MAX) in Portland, Oregon. The other two studies include all the City of Portland. With this advantage, @liu2017impact can examine the extensiveness of the bike network and  @welch2016long create a 300-meter grid cell system cast over the city.
 
-@levinson2018metropolitan divide the home attributes to three catagories: structural (including internal and external) attributes, location attributes, and neighborhood characteristics. All three studies basically follow this division.
-Moreover, @liu2017impact distinguish the two property types of SFHs and MFHs, add the advanced bicycle facility characteristics. Her study measures bothease of access (distance) and extensiveness of bike network (density).
-@welch2016long examine the bike facilities types,including local and regional, on-street and off-street.
+@levinson2018metropolitan divide the home attributes into three categories: structural (including internal and external) attributes, location attributes, and neighborhood characteristics. All three studies follow this division.
+Moreover, @liu2017impact distinguish the two property types of SFHs and MFHs, add the advanced bicycle facility characteristics. Her study measures both ease of access (distance) and extensiveness of bike network (density).
+@welch2016long examine the bike facilities types, including local and regional, on-street and off-street.
 There is also a risk of overfitting, which making an overly complex model to explain idiosyncrasies in the data under study. 
 
 Some relevant hedonic price studies show some consistent findings. Al-Mosaind et al. (1993), Lewis-Workman and Brod (1997), Chen et al. (1998), Dueker and Bianco (1999), @welch2016long found the positive effects by Light rail transit.
 Lindsey et al. (2004)	Krizek (2006) Asabere and Huffman (2009) Parent and vom Hofe (2013) found Multi-use paths have positive effects.
 Krizek (2006) and @welch2016long found the effects of bike lanes are not significant or negative.
-@liu2017impact further found extensiveness of the bike network is a positive and statistically significant contributor to property prices after controlling for proximity to bike facilites and other internal and external variables.
-As more studies on different urban regions, a meta analysis may be neccessary.
+@liu2017impact further found extensiveness of the bike network is a positive and statistically significant contributor to property prices after controlling for proximity to bike facilities and other internal and external variables.
+As more and more studies on different urban regions, a meta-analysis may be valuable.
 
 Notes {#notes}
 ==========
