--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -199,7 +199,7 @@ Let $W_1=Z_{1}=n\nu^ne^{−ny}$ and $W_i=Z_i−Z_{1}, i=2,..,n$, then $Z_{1}=w_1
 
 $$f_{W_1,W_i}(w_1,w_i)=f_{Z_{1},Z_i}(w_1,w_1+w_i)|J|=n\nu^{n+1}e^{−(nw_1+w_1+w_i)}=n\nu^{n+1}e^{−(n+1)w_1}e^{−w_i}$$
 
-$f_{W_1}(w)=n\nu^{n+1}e^{−(n+1)w}, w>\ln\nu$, $f_{W_i}(w)=e^{-w}$, $W_1, W_2$ are independent.
+$f_{W_1}(w)=n\nu^{n+1}e^{−(n+1)w}, w>\ln\nu$, $f_{W_i}(w)=e^{-w}$, $W_1, W_i$ are independent.
 
 $W_i=Z_i−Z_{1}=e^{-w_i}\sim Expo(1), i=2,..,n$. 
 
@@ -211,7 +211,7 @@ $$2T\sim Gam(n−1, 2)=\chi^2_{2(n−1)}$$
  
 **8.17** Suppose that $X_1,..,X_n$ are iid with a $beta(\mu,1)$ pdf and $Y_1,..,Y_m$ are iid with a $beta(\theta,1)$ pdf. Also assume that the $X$s are independent of the $Y$s.
 
-(a) Find an LRT of $H_0:(\theta=\mu$ versus $H_1:(\theta\ne\mu$.
+(a) Find an LRT of $H_0: \theta=\mu$ versus $H_1: \theta\ne\mu$.
 
 $f_X(x)=\frac{1}{B(\mu,1)}x^{\mu-1}(1-x)^{1-1}=\frac{\Gamma(\mu+1)}{\Gamma(\mu)\Gamma(1)}x^{\mu-1}=\mu x^{\mu-1}$
 
@@ -225,20 +225,20 @@ $$\frac{\partial}{\partial\theta}\ln L(\mu,\theta|x,y)=\frac{m}\theta+\sum_{j=1}
 
 Under $H_0$, $\theta=\mu$
 
-$$L(\mu|x,y)=\mu^{n+m}(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{\mu-1}$$
-$$\ln L(\mu|x,y)=(n+m)\ln\mu+(\mu-1)\ln(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{}$$
-$$\frac{\partial}{\partial\mu}\ln L(\mu|x,y)=\frac{n+m}\mu+\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j\overset{set}{=}0\implies\hat\mu_{0}=-\frac{n+m}{\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j}$$
+$$L(\theta|x,y)=\theta^{n+m}(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{\theta-1}$$
+$$\ln L(\theta|x,y)=(n+m)\ln\theta+(\theta-1)\ln(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{}$$
+$$\frac{\partial}{\partial\theta}\ln L(\theta|x,y)=\frac{n+m}\theta+\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j\overset{set}{=}0\implies\hat\theta_{0}=-\frac{n+m}{\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j}$$
 
 The LRT statistic is
 
-$$\Lambda=\frac{\sup L(\hat\mu_0|x,y)}{\sup L(\hat\mu_{MLE}|x,y)}=\frac{\hat\mu_0^{n+m}(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{\hat\mu_{0}-1}}{\hat\mu_{MLE}^n(\prod_{i=1}^nx_i)^{\hat\mu_{MLE}-1}\hat\theta_{MLE}^m(\prod_{j=1}^my_j)^{\hat\theta_{MLE}-1}}=\frac{\hat\mu_0^{n+m}}{\hat\mu_{MLE}^n\hat\theta_{MLE}^m}\cdot(\prod_{i=1}^nx_i)^{\hat\mu_0-\hat\mu_{MLE}}(\prod_{j=1}^my_j)^{\hat\mu_0-\hat\theta_{MLE}}$$
+$$\Lambda=\frac{\sup L(\hat\theta_0|x,y)}{\sup L(\hat\mu_{MLE}|x,y)}=\frac{\hat\theta_0^{n+m}(\prod_{i=1}^nx_i\prod_{j=1}^my_j)^{\hat\mu_{0}-1}}{\hat\mu_{MLE}^n(\prod_{i=1}^nx_i)^{\hat\mu_{MLE}-1}\hat\theta_{MLE}^m(\prod_{j=1}^my_j)^{\hat\theta_{MLE}-1}}=\frac{\hat\theta_0^{n+m}}{\hat\mu_{MLE}^n\hat\theta_{MLE}^m}\cdot(\prod_{i=1}^nx_i)^{\hat\theta_0-\hat\mu_{MLE}}(\prod_{j=1}^my_j)^{\hat\theta_0-\hat\theta_{MLE}}$$
 
  ---
  
 (b) Show that the test in part (a) can be based on the statistic
 $T=\frac{\sum\ln X_i}{\sum\ln X_i+\sum\ln Y_i}$
 
-Substituting $(\prod_{i=1}^nx_i)^{\hat\mu_0-\hat\mu_{MLE}}(\prod_{j=1}^my_j)^{\hat\mu_0-\hat\theta_{MLE}}=1$
+Substituting $(\prod_{i=1}^nx_i)^{\hat\theta_0-\hat\mu_{MLE}}(\prod_{j=1}^my_j)^{\hat\theta_0-\hat\theta_{MLE}}=1$
 
 $$\Lambda=\frac{\hat\mu_0^{n+m}}{\hat\mu_{MLE}^n\hat\theta_{MLE}^m}=\frac{(-\frac{n+m}{\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j})^{n+m}}{(-\frac{n}{\sum_{i=1}^n\ln x_i})^n(-\frac{m}{\sum_{j=1}^m\ln y_j})^m}=(\frac{n+m}{n})^n(\frac{n+m}{m})^m(\frac{\sum_{i=1}^n\ln x_i}{\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j})^{n}(\frac{\sum_{j=1}^m\ln y_j}{\sum_{i=1}^n\ln x_i+\sum_{j=1}^m\ln y_j})^{m}$$
 $$=(\frac{n+m}{n})^n(\frac{n+m}{m})^mT^n(1-T)^m$$
@@ -249,14 +249,14 @@ which is an unimodal function of $T$, so rejecting $H_0$ when $\Lambda\le c$ equ
 
 (c) Find the distribution of $T$ when $H_0$ is true, and then show how to get a test of size $\alpha=.10$.
 
-We know if $X\sim Gamma(\mu,\beta)$ and $Y\sim Gamma(\theta,\beta)$ are independent, then $T=\frac{X}{X+Y}\sim Beta(\mu,\theta)$.
+For $X_i\sim Beta(\mu,1), Y_i\sim Beta(\theta,1)$, $-\ln X_i\sim Expo(1/\mu),-\ln Y_i\sim Expo(1/\theta)$, then
 
-It also can derive from $-\ln X_i\sim Expo(\mu),-\ln Y_i\sim Expo(\theta)$ to $W=-\sum_{i=1}^n\ln X_i\sim Gamma(n,\mu),V=-\sum_{j=1}^m\ln Y_i\sim Gamma(n,\theta)$. Then $T=\frac{X}{X+Y}\sim Beta(\mu,\theta)$.
+$W=-\sum_{i=1}^n\ln X_i\sim Gamma(n,1/\mu),V=-\sum_{j=1}^m\ln Y_i\sim Gamma(m,1/\theta)$. For $\mu=\theta$, $W$ and $V$ are independent, $T=\frac{W}{W+V}\sim Beta(n,m)$.
 
 Solving this equations
 
-$$\begin{cases}P(T\le c_1)+P(T\ge c_2)=\alpha=0.10\\c_1^n(1-c_1)^m=c_2^n(1-c_2)^m\end{cases}$$
-The test $\Lambda\le c_0,\Lambda\ge c_1$ is most powerful $\forall\theta\neq\mu$, so it is UMP at $0.10$ level.
+$$\begin{cases}P(T\le c_1)+P(T\ge c_2)=\alpha=0.10\\c_1^{n-1}(1-c_1)^{m-1}=c_2^{n-1}(1-c_2)^{m-1}\end{cases}$$
+The test $\Lambda\le c_1,\Lambda\ge c_2$ is most powerful $\forall\theta\neq\mu$, so it is UMP at $0.10$ level.
 
  ---
  
@@ -293,7 +293,7 @@ The test $\Lambda\le c_0=0.076546$,$\Lambda\ge c_1=3.637798$ is most powerful $\
 
 The Type II error probability is
 
-$$P(c_0<Y<c_1|\theta_1)=\int_{c_0}^{c_1}\frac12e^{-y^{1/2}} y^{-1/2}dy=\left.-e^{-y^{1/2}}\right|_{c_0}^{c_1}=0.609824$$
+$$P(c_0<Y<c_1|\theta_1)=\int_{c_0}^{c_1}\frac12e^{-y^{1/2}} y^{-1/2}dy=\left.-e^{-y^{1/2}}\right|_{c_0}^{c_1}=e^{-c_0^{1/2}}-e^{-c_1^{1/2}}=0.609824$$
 
 ## HW3
 
@@ -303,7 +303,34 @@ $$f(x|\theta)=\frac{e^{x-\theta}}{(1+e^{x-\theta})^2},-\infty<x<\infty,-\infty<\
 
 (a) Show that this family has an MLR.
 
+Let $\theta_2>\theta_1$,
+
+$$\Lambda=\frac{f(x|\theta_2)}{f(x|\theta_1)}=\frac{\frac{e^{x-\theta_2}}{(1+e^{x-\theta_2})^2}}{\frac{e^{x-\theta_1}}{(1+e^{x-\theta_1})^2}}=e^{\theta_1-\theta_2}\left[\frac{1+e^{x-\theta_1}}{1+e^{x-\theta_2}}\right]^2$$
+
+Take the derivative of the part in brackets.
+
+$$\frac{d}{dx}(\frac{1+e^{x-\theta_1}}{1+e^{x-\theta_2}})=\frac{(1+e^{x-\theta_1})'(1+e^{x-\theta_2})-(1+e^{x-\theta_1})(1+e^{x-\theta_2})'}{(1+e^{x-\theta_2})^2}=\frac{e^{x-\theta_1}(1+e^{x-\theta_2})-(1+e^{x-\theta_1})e^{x-\theta_2}}{(1+e^{x-\theta_2})^2}=\frac{e^{x-\theta_1}-e^{x-\theta_2}}{(1+e^{x-\theta_2})^2}$$
+
+For $\theta_2>\theta_1$, $\Lambda$ is a monotone function of $f(x|\theta)$. This family has a Monotone Likelihood ratio (MLR).
+
+ ---
+
 (b) Based on one observation, $X$, find the most powerful size $\alpha$ test of $H_0:\theta=0$ versus $H_1:\theta=1$. For $\alpha=.2$, find the size of the Type II Error.
+
+
+
+For $\alpha=1-F(k'|0)=1-\frac{e^{k'}}{1+e^{k'}}=\frac{1}{1+e^{k'}}=0.2$,
+
+$k'=\ln{\frac{1-\alpha}{\alpha}}=\ln{\frac{1-0.2}{0.2}}=1.386294$
+
+Type II Error $\beta=F(k'|1)=\frac{e^{k'-1}}{1+e^{k'-1}}=log(4)$
+
+```{r eval=FALSE, include=FALSE}
+log(4)
+exp(1.386294-1)/(1+exp(1.386294-1))
+```
+
+ ---
 
 (c) Show that the test in part (b) is UMP size $\alpha$ for testing $H_0:\theta\le0$ versus $H_1:\theta>1$. What can be said about UMP tests in general for the logistic location family?
 
